--- a/src/App.css
+++ b/src/App.css
@@ -30,11 +30,12 @@ h3{
   font-size: 1.5rem;
 }
 .btn{
+  display: block;
   background-color: blue;
   color: white;
   border: none;
   padding: 0.6rem 1.2rem;
-  margin: 0.5rem;
+  margin: 0.5rem auto;
   font-size: 1.2rem;
   font-weight: 600;
   border-radius: 10px;
@@ -63,4 +64,39 @@ section{
 h1{
   margin: auto;
   text-align: center;
+}
+ul{
+  margin: 1rem;
+}
+li{
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  margin: 1rem auto;
+}
+article{
+  display: flex;
+  gap: 2rem;
+  margin: 1rem 5rem;
+  justify-content: space-around;
+  background-color: white;
+  padding: 1rem;
+
+}
+article div{
+  text-align: center;
+}
+img{
+  object-fit: cover;
+  width: 5rem;
+  height: 5rem;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+h4{
+  font-size: 1.5rem;
+}
+p{
+  font-size: 1.2rem;
+  font-weight: 600;
 }
